slot.  Symbol macros are created for the accessor functions using
'cl-symbol-macrolet', so that they can be used with 'setq' and 'setf'.

** Whitespace

---
*** 'whitespace-cleanup' now adds missing newline at end of file.
If 'whitespace-style' includes 'missing-newline-at-eof' (which is the
default), the 'whitespace-cleanup' function will now add the newline.

** Bookmark

---
*** Bookmark history now saves each bookmark only once.
Previously, the variable 'bookmark-history' accumulated duplicate
bookmark names when bookmark features were used interactively.  This
made their history larger than necessary for frequent bookmark users.
Bookmark names are now saved uniquely.

---
*** New user option 'bookmark-bmenu-type-column-width'.
This user option controls the width of the type column on the bookmark
menu 'bookmark-bmenu-list'.  The default value is 8 which is backwards
compatible.

** Recentf

---
*** New user option 'recentf-show-messages'.
'recentf-save-list' can print a message when saving the recentf list.
The new option, if set to nil, suppresses this message.

---
*** New user option 'recentf-suppress-open-file-help'.
By default, invoking 'recentf-open-files' displays a message saying what
action clicking or typing 'RET' on the item at point executes, and tabbing
between items in the "*Open Recent*" buffer likewise displays such
messages.  To suppress these messages, customize the user option
'recentf-suppress-open-file-help' to non-nil.  The default value of this
option is nil.

** Saveplace

---
*** You can now regularly auto-save places.
Customize user option 'save-place-autosave-interval' to the number of
seconds between auto saving places.  For example, to save places every 5
minutes:

    M-x customize-option RET save-place-autosave-interval RET 300

Or in Elisp:

    (setopt save-place-autosave-interval (* 60 5))

If 'save-place-autosave-interval' is nil, auto saving is disabled; this