@@ -156,6 +156,9 @@
 ;; `global-whitespace-newline-mode'
 ;;    Toggle NEWLINE global minor mode visualization ("NL" on mode line).
 ;;
+;; `whitespace-page-delimiters-mode'
+;;    Display page delimiters characters as horizontal lines ("pd" on mode line).
+;;
 ;; `whitespace-report'
 ;;    Report some blank problems in buffer.
 ;;
@@ -326,6 +329,11 @@ The value is a list containing one or more of the following symbols:
                         This has effect only if `face' (see above)
                         is present in `whitespace-style'.
 
+   page-delimiters       visualize page delimiters characters (^L)
+                         as horizontal lines.
+                         This has effect only if `face' (see above)
+                         is present in `whitespace-style'.
+
    empty                visualize empty lines at beginning and/or
                         end of buffer via faces.
                         This has effect only if `face' (see above)
@@ -440,6 +448,7 @@ See also `whitespace-display-mappings' for documentation."
               (const :tag "(Face) NEWLINEs" newline)
               (const :tag "(Face) Missing newlines at EOB"
                      missing-newline-at-eof)
+              (const :tag "(Face) Page delimiters" page-delimiters)
               (const :tag "(Face) Empty Lines At BOB And/Or EOB" empty)
               (const :tag "(Face) Indentation SPACEs" indentation::tab)
               (const :tag "(Face) Indentation TABs"
@@ -622,6 +631,14 @@ Used when `whitespace-style' includes the value `space-after-tab'.")
 
 See `whitespace-space-after-tab-regexp'.")
 
+(defface whitespace-page-delimiter
+  '((((supports :underline (:color foreground-color  :style double-line)))
+     :underline (:color foreground-color :style double-line)
+     :height 0.1 :extend t :inherit shadow)
+    (((supports :strike-through t))
+     :height 0.1 :strike-through t :extend t :inherit shadow)
+    (t :height 0.1 :extend t :inherit shadow :inverse-video t))
+  "Face used to visualize page delimiter characters.")
 
 (defcustom whitespace-hspace-regexp
   "\\(\u00A0+\\)"
@@ -934,6 +951,17 @@ Any other value is treated as nil."
 			  (const :tag "Abort On Bogus" abort-on-bogus)
 			  (const :tag "Warn If Read-Only" warn-if-read-only)))))
 
+(defvar whitespace--page-delimiters-keyword
+  `((,(lambda (bound)
+        (re-search-forward (concat page-delimiter "\n") bound t))
+     0
+     (prog1 nil
+       (put-text-property (match-beginning 0) (1- (match-end 0)) 'display " ")
+       (add-text-properties (match-beginning 0) (match-end 0)
+                            '( face whitespace-page-delimiter
+                               display-line-numbers-disable t)))))
+  "Used to add page delimiters keywords to `whitespace-font-lock-keywords'.")
+
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;;;; User commands - Local mode
@@ -975,6 +1003,15 @@ See also `whitespace-newline' and `whitespace-display-mappings'."
 			 1 -1)))
   ;; sync states (running a batch job)
   (setq whitespace-newline-mode whitespace-mode))
+
+;;;###autoload
+(define-minor-mode whitespace-page-delimiters-mode
+  "Display page delimiters characters as horizontal lines."
+  :lighter " pd"
+  :group 'whitespace
+  (let ((whitespace-style '(face page-delimiters)))
+    (whitespace-mode (if whitespace-page-delimiters-mode
+                         1 -1))))
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -1044,6 +1081,7 @@ See also `whitespace-newline' and `whitespace-display-mappings'."
     tabs
     spaces
     trailing
+    page-delimiters
     lines
     lines-tail
     lines-char
@@ -1071,6 +1109,7 @@ See also `whitespace-newline' and `whitespace-display-mappings'."
   '((?f    . face)
     (?t    . tabs)
     (?s    . spaces)
+    (?p    . page-delimiters)
     (?r    . trailing)
     (?l    . lines)
     (?L    . lines-tail)
@@ -1156,6 +1195,7 @@ Interactively, it reads one of the following chars:
    t	toggle TAB visualization
    s	toggle SPACE and HARD SPACE visualization
    r	toggle trailing blanks visualization
+   p	toggle page delimiters visualization
    l	toggle \"long lines\" visualization
    L	toggle \"long lines\" tail visualization
    n	toggle NEWLINE visualization
@@ -1186,6 +1226,7 @@ The valid symbols are:
    tabs			toggle TAB visualization
    spaces		toggle SPACE and HARD SPACE visualization
    trailing		toggle trailing blanks visualization
+   page-delimiters	toggle page delimiters visualization
    lines		toggle \"long lines\" visualization
    lines-tail		toggle \"long lines\" tail visualization
    newline		toggle NEWLINE visualization
@@ -1237,6 +1278,7 @@ Interactively, it accepts one of the following chars:
    t	toggle TAB visualization
    s	toggle SPACE and HARD SPACE visualization
    r	toggle trailing blanks visualization
+   p	toggle page delimiters visualization
    l	toggle \"long lines\" visualization
    L	toggle \"long lines\" tail visualization
    C-l	toggle \"long lines\" one character visualization
@@ -1268,6 +1310,7 @@ The valid symbols are:
    tabs			toggle TAB visualization
    spaces		toggle SPACE and HARD SPACE visualization
    trailing		toggle trailing blanks visualization
+   page-delimiters	toggle page delimiters visualization
    lines		toggle \"long lines\" visualization
    lines-tail		toggle \"long lines\" tail visualization
    lines-char		toggle \"long lines\" one character visualization
@@ -2035,6 +2078,7 @@ resultant list will be returned."
 	   (memq 'lines-tail              whitespace-active-style)
 	   (memq 'lines-char              whitespace-active-style)
 	   (memq 'newline                 whitespace-active-style)
+           (memq 'page-delimiters         whitespace-active-style)
 	   (memq 'empty                   whitespace-active-style)
 	   (memq 'indentation             whitespace-active-style)
 	   (memq 'indentation::tab        whitespace-active-style)
@@ -2108,6 +2152,13 @@ resultant list will be returned."
                 ;; first overflowing character
                 ((memq 'lines-char whitespace-active-style) 3))
               whitespace-line prepend)))
+       ,@(when (memq 'page-delimiters whitespace-active-style)
+           (unless (and (memq 'display font-lock-extra-managed-props)
+                        (memq 'display-line-numbers-disable font-lock-extra-managed-props))
+             (setq-local font-lock-extra-managed-props
+                         `(,@font-lock-extra-managed-props display display-line-numbers-disable)))
+           ;; Show page delimiters characters
+           whitespace--page-delimiters-keyword)
        ,@(when (or (memq 'space-before-tab whitespace-active-style)
                    (memq 'space-before-tab::tab whitespace-active-style)
                    (memq 'space-before-tab::space whitespace-active-style))
